# mrivis

./: .gitattributes  .gitignore  .travis.yml  API.html  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  alignment_API.html  alignment_usage.html  authors.html  check_alignment.html  classes.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html  vis_classes_api.html  vis_classes_usage.html
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_modules/mrivis/: base.html  workflow.html
_sources/: alignment_usage.rst.txt  check_alignment.rst.txt  classes.rst.txt  index.rst.txt  installation.rst.txt  readme.rst.txt  usage.rst.txt
docs/: .gitignore  API.rst  Makefile  alignment_API.rst  alignment_usage.rst  classes.rst  conf.py  index.rst  installation.rst  make.bat  paper.bib  paper.md  readme.rst  usage.rst  vis_classes_api.rst  vis_classes_usage.rst
docs/example_notebooks/: mrivis demo - Collage and SlicePicker classes.ipynb  mrivis_demo_Collage_SlicePicker_classes.ipynb  mrivis_demo_vis_classes.ipynb
matlab_code/: README.md  getdim.m  mrivis_checkerboard.m  mrivis_checkerboard.py  mrivis_collage.m  mrivis_collage.py
mrivis/: __init__.py  _version.py  base.py  cli.py  color_maps.py  config.py  mrivis.py  utils.py  workflow.py
mrivis/tests/: test_carpet.py  test_mrivis.py
tests/: __init__.py  test_mrivis.py
