[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mrivis"
dynamic = ["version"]
description = "Intuitive high-level classes for visualization of medical imaging data"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Pradeep Reddy Raamana", email = "raamana@gmail.com" },
]
keywords = [
    "mrivis",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "matplotlib",
    "nibabel",
    "numpy",
    "scipy",
]


[project.urls]
Homepage = "https://github.com/raamana/mrivis"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mrivis/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mrivis",
]
